--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <style>
 body{ margin: 0; padding: 0; background: #D64043; }
+img { width: 100%; height: 100%; }
 </style>
 
 <body>
-<h1>Web View (static HTML)</h1>
+<img src="http://192.168.0.9:9090/stream/video.mjpeg" />
 </body>
 
 <script src="https://cdn.socket.io/socket.io-1.7.3.js"></script>
